for roee - choose 5 random riddles to show

--- a/html/riddle.html
+++ b/html/riddle.html
@@ -15,7 +15,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr id="tr_riddle_1">
                         <th scope="row">1</th>
                         <td>If you flip a valid coin three times, what are the odds of it to fall of tails al least once?</td>
                         <td>
@@ -25,7 +25,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="tr_riddle_2">
                         <th scope="row">2</th>
                         <td>A frog fell into a 30m’ deep hole. Every day she climbs 3m’ but then falls back down 2m’. How many days will it take for the frog to get out of the hole?</td>
                         <td>
@@ -35,7 +35,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="tr_riddle_3">
                         <th scope="row">3</th>
                         <td>Apple mash contains 99% water and 1% apples. I left 100kg of apple mash in the sun and a portion of the water evaporated. Now the apple mash consist only 98% water. What is the weight of the apple mash?</td>
                         <td>
@@ -45,7 +45,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="tr_riddle_4">
                         <th scope="row">4
                         </th>
                         <td>An exam for a disease with a 1/1000 frequency gives a false-positive 5% of the times. What are the odds for an ill person to get a positive result?</td>
@@ -56,7 +56,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="tr_riddle_5">
                         <th scope="row">5
                         </th>
                         <td>A bakery bakes 400 cookies every day. When the manager does not look, 20% of the cookies are thrown away. How many extra cookies does the manager has to back to make it up?</td>
@@ -68,7 +68,7 @@
                         </td>
                     </tr>
 
-                    <tr>
+                    <tr id="tr_riddle_6">
                         <th scope="row">6
                         </th>
                         <td>Bob stands in a queue. He counts the pepole ahead of him and finds out that he is in the 38th place. Then he counts the pepole behind him and finds out he is in the 56th place from last place. How many pepole are in the queue?</td>
@@ -79,7 +79,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="tr_riddle_7">
                         <th scope="row">7
                         </th>
                         <td>The ants are walking in a line. In what place will the ant that passed the one in the second place be?
