--- a/html/riddle.html
+++ b/html/riddle.html
@@ -9,19 +9,19 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
+                        <th scope="col"></th>
                         <th scope="col">Question</th>
                         <th scope="col">Answer</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr id="tr_riddle_1">
-                        <th scope="row">1</th>
+                        <th scope="row"></th>
                         <td>If you flip a valid coin three times, what are the odds of it to fall of tails al least once?</td>
                         <td>
                             <div class="md-form">
                                 <input type="text" id="riddle_1" class="form-control">
-                                <label for="riddle_1">Answer 1 </label>
+                                <label for="riddle_1">Answer</label>
                             </div>
                         </td>
                     </tr>
@@ -31,63 +31,63 @@
                         <td>
                             <div class="md-form">
                                 <input type="text" id="riddle_2" class="form-control">
-                                <label for="riddle_2">Answer 2 </label>
+                                <label for="riddle_2">Answer</label>
                             </div>
                         </td>
                     </tr>
                     <tr id="tr_riddle_3">
-                        <th scope="row">3</th>
+                        <th scope="row"></th>
                         <td>Apple mash contains 99% water and 1% apples. I left 100kg of apple mash in the sun and a portion of the water evaporated. Now the apple mash consist only 98% water. What is the weight of the apple mash?</td>
                         <td>
                             <div class="md-form">
                                 <input type="text" id="riddle_3" class="form-control">
-                                <label for="riddle_3">Answer 3 </label>
+                                <label for="riddle_3">Answer</label>
                             </div>
                         </td>
                     </tr>
                     <tr id="tr_riddle_4">
-                        <th scope="row">4
+                        <th scope="row">
                         </th>
                         <td>An exam for a disease with a 1/1000 frequency gives a false-positive 5% of the times. What are the odds for an ill person to get a positive result?</td>
                         <td>
                             <div class="md-form">
                                 <input type="text" id="riddle_4" class="form-control">
-                                <label for="riddle_4">Answer 4 </label>
+                                <label for="riddle_4">Answer</label>
                             </div>
                         </td>
                     </tr>
                     <tr id="tr_riddle_5">
-                        <th scope="row">5
+                        <th scope="row">
                         </th>
                         <td>A bakery bakes 400 cookies every day. When the manager does not look, 20% of the cookies are thrown away. How many extra cookies does the manager has to back to make it up?</td>
                         <td>
                             <div class="md-form">
                                 <input type="text" id="riddle_5" class="form-control">
-                                <label for="riddle_5">Answer 5 </label>
+                                <label for="riddle_5">Answer</label>
                             </div>
                         </td>
                     </tr>
 
                     <tr id="tr_riddle_6">
-                        <th scope="row">6
+                        <th scope="row">
                         </th>
                         <td>Bob stands in a queue. He counts the pepole ahead of him and finds out that he is in the 38th place. Then he counts the pepole behind him and finds out he is in the 56th place from last place. How many pepole are in the queue?</td>
                         <td>
                             <div class="md-form">
                                 <input type="text" id="riddle_6" class="form-control">
-                                <label for="riddle_6">Answer 6 </label>
+                                <label for="riddle_6">Answer</label>
                             </div>
                         </td>
                     </tr>
                     <tr id="tr_riddle_7">
-                        <th scope="row">7
+                        <th scope="row">
                         </th>
                         <td>The ants are walking in a line. In what place will the ant that passed the one in the second place be?
                         </td>
                         <td>
                             <div class="md-form">
                                 <input type="text" id="riddle_7" class="form-control">
-                                <label for="riddle_7">Answer 7 </label>
+                                <label for="riddle_7">Answer</label>
                             </div>
                         </td>
                     </tr>
