for roee - choose 5 random riddles to show

--- a/html/riddle.html
+++ b/html/riddle.html
@@ -26,7 +26,7 @@
                         </td>
                     </tr>
                     <tr id="tr_riddle_2">
-                        <th scope="row">2</th>
+                        <th scope="row"></th>
                         <td>A frog fell into a 30m’ deep hole. Every day she climbs 3m’ but then falls back down 2m’. How many days will it take for the frog to get out of the hole?</td>
                         <td>
                             <div class="md-form">
