--- a/html/exp.html
+++ b/html/exp.html
@@ -195,7 +195,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="feedback_body">
                     Your answer is Wrong!
                 </div>
                 <div class="modal-footer">
