for Ofra - and feedback for tests

--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,25 @@
-<div id="home" style="margin-top: 100px">
-
- home
+<div id="home" style="margin-top: 100px;margin-left: 30px">
 
 
- instructions before the experiment
+
+ In this experiment you will be asked to decide if a pair is match or not match and to scale your confidence level.
+ <br>
+ each pair consist from 2 terms from two different schemes.
+ <br>
+ A Term is a field in schema.
+ <br>
+ For each term you will be given his: name, type, hierarchy and instances (if exists).
+ <br>
+ The color in the hierarchy:
+ <br>
+ green - Father of the term in the hierarchy.
+ <br>
+ red - The Term.
+ <br>
+ blue - Brothers of the term in the hierarchy.
+ <br>
+ <br>
+ There are three parts at the trail: Logical riddles, first stage, second stage.
+ <br>
+ please click at "The Experiment" at the top of the page.
 </div>
