--- a/html/instruction_after.html
+++ b/html/instruction_after.html
@@ -1,5 +1,5 @@
 
-<div id="instruction_after" style="margin-top: 100px">
+<div id="instruction_after" style="margin-top: 100px;padding-left: 30px">
 
 
 
