for Ofra - and feedback for tests

--- a/html/home.html
+++ b/html/home.html
@@ -12,11 +12,11 @@
  <br>
  The color in the hierarchy:
  <br>
- green - Father of the term in the hierarchy.
+ green - Parent of the term in the hierarchy.
  <br>
  red - The Term.
  <br>
- blue - Brothers of the term in the hierarchy.
+ blue - Sibling of the term in the hierarchy.
  <br>
  <br>
  There are three parts at the trail: Logical riddles, first stage, second stage.
