--- a/html/nav.html
+++ b/html/nav.html
@@ -303,7 +303,7 @@
 	</div>
 
 	<div class="modal fade" id="update_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Update Experiment Modal" aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-fluid" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" >Update Experiments</h5>
