--- a/html/statistics.html
+++ b/html/statistics.html
@@ -2,7 +2,16 @@
 <div id="statistics" class="col-sm-12" style="margin-top: 100px;margin-left: 20px">
 
     <h5 >Statistics</h5>
+
     <div class="row">
+        <div class="col"></div>
+
+        <div class="col-sm-10">
+            <canvas id="correctAnswersBar"></canvas>
+        </div>
+
+        <div class="col"></div>
 
     </div>
+
 </div>
