Add finish page for figure eight

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -2,6 +2,20 @@
 
 
 	<h1>
-		thank you
+		Thank You!
 	</h1>
+
+	<div class="md-form">
+		<i class="fas fa-user prefix"></i>
+		<input type="text" class="form-control" id="new_user_card_id">
+		<label for="new_user_card_id">Enter your ID</label>
+	</div>
+
+	<h3>
+		Please copy and paste the following code to Figure Eight field:
+	</h3>
+
+	<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="add_user_data_finish_exp()">Finish</button>
+
+
 </div>
