--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -11,11 +11,14 @@
 		<label for="new_user_card_id">Enter your ID</label>
 	</div>
 
-	<h3>
+	<h4>
 		Please copy and paste the following code to Figure Eight field:
-	</h3>
+	</h4>
 
 	<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="add_user_data_finish_exp()">Finish</button>
+
+	<div id="show_message_after_finish_figure_8">
+	</div>
 
 
 </div>
