add generate of regex field for figure 8 with randexp

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -12,7 +12,11 @@
 	</div>
 
 	<h4>
-		Please copy and paste the following code to Figure Eight field:
+		Please copy and paste the following code to Figure Eight field:<br>
+		<label id="validFieldForFigureEight">
+			<input class="form-control" type="text" placeholder="{$scope.validFieldFigureEight}" readonly>
+		</label>
+
 	</h4>
 
 	<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="add_user_data_finish_exp()">Finish</button>
