--- a/html/instruction_after.html
+++ b/html/instruction_after.html
@@ -1,12 +1,8 @@
 
-<div id="instruction_after" style="margin-top: 100px;padding-left: 30px">
+<div id="instruction_after" style="margin-top: 100px;padding-left: 30px; text-align: center">
 
-
-
-
-
-	Start the Experiment
-
+	Click on Continue to Start the Experiment
+	<br>
 	<button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="after_instructions()">Continue</button>
 
 </div>
