update finish_exp page

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -22,15 +22,18 @@
         <br>
 
         <label>
-            <input class="form-control" type="text" placeholder={{$scope.validFieldFigureEight}} readonly
+            <input class="form-control" type="text" placeholder="{{$scope.validFieldFigureEight}}" readonly
                    style="height: 44px;  width: 476px;">
         </label>
 
         <br>
         <button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="add_user_data_finish_exp()">Finish</button>
 
-        <div id="show_message_after_finish_figure_8">
-        </div>
+        <br>
+
+        <h5 id="show_message_after_finish_figure_8">
+        </h5>
+        
     </div>
 
 </div>
