--- a/html/home.html
+++ b/html/home.html
@@ -22,4 +22,10 @@
  There are three parts at the trail: Logical riddles, first stage, second stage.
  <br>
  please click at "The Experiment" at the top of the page.
+
+ <label>
+  <input class="form-control" type="text" placeholder="{{$scope.validFieldFigureEight}}" readonly
+         style="height: 44px;  width: 476px;">
+ </label>
+ 
 </div>
