update finish_exp page

--- a/html/home.html
+++ b/html/home.html
@@ -24,8 +24,8 @@
  please click at "The Experiment" at the top of the page.
 
  <label>
-  <input class="form-control" type="text" placeholder="{{$scope.validFieldFigureEight}}" readonly
+  <input class="form-control" type="text" placeholder="{{$scope.curr_count_ans}}" readonly
          style="height: 44px;  width: 476px;">
  </label>
- 
+
 </div>
