update finish_exp page

--- a/html/home.html
+++ b/html/home.html
@@ -24,7 +24,7 @@
  please click at "The Experiment" at the top of the page.
 
  <label>
-  <input class="form-control" type="text" placeholder="{{$scope.curr_count_ans}}" readonly
+  <input id="figureEightValidateField" class="form-control" type="text" placeholder="" readonly
          style="height: 44px;  width: 476px;">
  </label>
 
