update finish_exp page - figure eight field

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -22,7 +22,7 @@
         <br>
 
         <label>
-            <input class="form-control" type="text" placeholder="{{$scope.validFieldFigureEight}}" readonly
+            <input id="figureEightValidateField" class="form-control" type="text" placeholder="" readonly
                    style="height: 44px;  width: 476px;">
         </label>
 
