--- a/html/home.html
+++ b/html/home.html
@@ -24,3 +24,5 @@
  please click at "The Experiment" at the top of the page.
 
 </div>
+
+<div id="container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
