add background image to heat map

--- a/html/home.html
+++ b/html/home.html
@@ -23,6 +23,7 @@
  <br>
  please click at "The Experiment" at the top of the page.
 
+ <div id="heatMap_container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
+
 </div>
 
-<div id="container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
