--- a/html/exp.html
+++ b/html/exp.html
@@ -1,10 +1,10 @@
-<div id="experiment" class="container" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="container" style="margin-top: 90px" ng-mousemove="captureCoordinate($event)">
 
     <div class="row">
         <div class="col">
-            <h1 id="exp_hello">
+            <h3 id="exp_hello">
 
-            </h1>
+            </h3>
             <hr>
         </div>
     </div>
@@ -141,7 +141,7 @@
                                         Insert Confidence level that this two terms are the same (in [0,1])
                                     </small>
                                     -->
-                                    <input id="user_confidence" class="custom-range" type="range" min="0" max="100" step="1"/>
+                                    <input id="user_confidence" class="custom-range" type="range" min="0" max="100" step="1" data-show-value="true"/>
                                     <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
                                 </div>
                             </div>
