--- a/html/exp.html
+++ b/html/exp.html
@@ -143,8 +143,17 @@
                                     -->
                                     <input id="user_confidence" class="custom-range" type="range" min="0" max="100" step="1"
                                            ng-model="user_current_confidence" ng-change="$scope.update_confidence_TextInput();"/>
-                                    <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
-                                    <output id="text_confidence_input"></output>
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
+                                            </td>
+                                            <td>
+                                                <output id="text_confidence_input"></output>
+                                            </td>
+                                        </tr>
+                                    </table>
+
                                 </div>
                             </div>
                         </td>
