--- a/html/exp.html
+++ b/html/exp.html
@@ -134,7 +134,7 @@
                         </td>
                         <td style="width:450px">
                             <div>
-                                <div class="md-form" style="margin: 0 auto;float: none;">
+                                < class="md-form" style="margin: 0 auto;float: none;">
                                     <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
                                     <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
                                     <small id="user_confidenceMD" class="form-text text-muted">
@@ -143,8 +143,16 @@
                                     -->
                                     <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
                                         <input id="user_confidence" value="0" class="custom-range" type="range" min="0" max="100" step="1"/>
-                                        <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
-                                        <output name="text_confidence_input" for="user_confidence"></output>
+                                        <table>
+                                            <tr>
+                                                <td>
+                                                    <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
+                                                </td>
+                                                <td>
+                                                    <output name="text_confidence_input" for="user_confidence"></output>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </form>
 
                                 </div>
