--- a/html/exp.html
+++ b/html/exp.html
@@ -143,16 +143,11 @@
                                     -->
                                     <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
                                         <input id="user_confidence" value="0" class="custom-range" type="range" min="0" max="100" step="1"/>
-                                        <table>
-                                            <tr>
-                                                <td>
-                                                    <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
-                                                </td>
-                                                <td>
-                                                    <output name="text_confidence_input" for="user_confidence"></output>
-                                                </td>
-                                            </tr>
-                                        </table>
+
+                                        <div class="row" style="padding-left: 15px;padding-top: 10px">
+                                            <label for="user_confidence" data-error="wrong" data-success="right" >Your Confidence</label>
+                                            <output name="text_confidence_input" for="user_confidence"></output>
+                                        </div>
                                     </form>
 
                                 </div>
