finish adding of text for confidence level

--- a/html/exp.html
+++ b/html/exp.html
@@ -65,11 +65,11 @@
                             Instance Example
                         </th>
                         <td id="A_col_instance">
-                            Roee, Avigdor
+                            A, B
                         </td>
 
                         <td id="B_col_instance">
-                            Roee Shraga, Avigdor
+                            C, D
                         </td>
 
                     </tr>
@@ -139,8 +139,12 @@
                                         <input id="user_confidence" value="0" class="custom-range" type="range" min="0" max="100" step="1"/>
 
                                         <div class="row" style="padding-left: 15px;padding-top: 10px">
-                                            <label for="user_confidence" data-error="wrong" data-success="right" >Your Confidence </label>
-                                            <output name="text_confidence_input" for="user_confidence"></output>
+                                            <div class="col-sm-2">
+                                                <label for="user_confidence" data-error="wrong" data-success="right" >Your Confidence </label>
+                                            </div>
+                                            <div class="col-sm-2">
+                                                <output name="text_confidence_input" for="user_confidence"></output>
+                                            </div>
                                         </div>
                                     </form>
 
