finish adding of text for confidence level

--- a/html/exp.html
+++ b/html/exp.html
@@ -138,14 +138,17 @@
                                     <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
                                         <input id="user_confidence" value="0" class="custom-range" type="range" min="0" max="100" step="1"/>
 
-                                        <div class="row" style="padding-left: 15px;padding-top: 10px">
-                                            <div class="col-sm-2">
-                                                <label for="user_confidence" data-error="wrong" data-success="right" >Your Confidence </label>
-                                            </div>
-                                            <div class="col-sm-2">
-                                                <output name="text_confidence_input" for="user_confidence"></output>
-                                            </div>
-                                        </div>
+                                        <table>
+                                            <tr style="padding-left: 15px;padding-top: 10px">
+                                                <td>
+                                                    <label for="user_confidence" data-error="wrong" data-success="right" >Your Confidence </label>
+                                                </td>
+                                                <td>
+                                                    <output name="text_confidence_input" for="user_confidence"></output>
+                                                </td>
+                                            </tr>
+                                        </table>
+
                                     </form>
 
                                 </div>
