--- a/html/exp.html
+++ b/html/exp.html
@@ -138,9 +138,10 @@
                                     <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
                                         <input id="user_confidence" value="0" class="custom-range" type="range" min="0" max="100" step="1"/>
 
-                                        <label for="user_confidence" data-error="wrong" data-success="right" style="display: block">
-                                            Your Confidence </label>
-                                        <output name="text_confidence_input" for="user_confidence"></output>
+                                        <label for="user_confidence" data-error="wrong" data-success="right"
+                                               style="display: block; margin-top:10px">Your Confidence </label>
+                                        <output name="text_confidence_input" for="user_confidence" style="border-left-width: 20px;
+                                                width: 20px;"></output>
                                     </form>
 
                                 </div>
