change table size

--- a/html/exp.html
+++ b/html/exp.html
@@ -5,7 +5,7 @@
             <h3 id="exp_hello">
 
             </h3>
-            <hr>
+            <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
         </div>
     </div>
     <div class="row">
@@ -14,7 +14,7 @@
 
         </div>
         <div class="col-sm-10">
-            <table class="table">
+            <table class="table" style="height: 400px; display: block; overflow: auto;">
 
                 <thead>
                     <tr>
@@ -141,7 +141,7 @@
                                         <label for="user_confidence" data-error="wrong" data-success="right"
                                                style="display: block; margin-top:10px">Your Confidence </label>
                                         <output name="text_confidence_input" for="user_confidence" style="border-left-width: 20px;
-                                                width: 20px;"></output>
+                                                width: 20px; padding-left: 130px"></output>
                                     </form>
 
                                 </div>
