change table size

--- a/html/nav.html
+++ b/html/nav.html
@@ -1,7 +1,7 @@
 <!-- Static navbar -->
 
 <div id="nav">
-	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="height: 56px">
 		<div class="container">
 			<a class="navbar-brand" href="#" ng-click="" id="navHeader">Schema Matching</a>
 			<!-- Left links-->
