--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" class="container" style="margin-top: 90px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="container" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
 
     <div class="row">
         <div class="col">
@@ -73,7 +73,7 @@
                         </td>
 
                     </tr>
-                    <tr style="margin-top: 5px" id="row_h">
+                    <tr style="margin-top: 5px" id="row_h" style="height: 150px; display: block; overflow: auto;">
                         <th scope="row">
                             Hierarchy
                         </th>
