change initialize of range field

--- a/html/exp.html
+++ b/html/exp.html
@@ -140,11 +140,11 @@
 
                                         <label for="user_confidence" data-error="wrong" data-success="right"
                                                style="display: block; margin-top:10px">Your Confidence </label>
-                                        <output name="text_confidence_input" for="user_confidence" style="border-left-width: 20px;
+                                        <output id="text_confidence_input" name="text_confidence_input" for="user_confidence" style="border-left-width: 20px;
                                                 width: 20px; padding-left: 130px"></output>
                                     </form>
 
-                                </div>
+                            </div>
                             </div>
                         </td>
                         <td>
