change initialize of range field

--- a/html/exp.html
+++ b/html/exp.html
@@ -136,7 +136,7 @@
                             <div>
                                 <div class="md-form" style="margin: 0 auto;float: none;">
                                     <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
-                                        <input id="user_confidence" value="50" class="custom-range" type="range" min="0" max="100" step="1"/>
+                                        <input id="user_confidence" class="custom-range" type="range" min="0" max="100" value="50" step="1"/>
 
                                         <label for="user_confidence" data-error="wrong" data-success="right"
                                                style="display: block; margin-top:10px">Your Confidence </label>
