--- a/html/home.html
+++ b/html/home.html
@@ -26,5 +26,7 @@
  <!--
  <div id="heatMap_container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
  -->
+ <canvas id="confidenceLineGraph"></canvas>
+
 </div>
 
