--- a/html/home.html
+++ b/html/home.html
@@ -26,7 +26,10 @@
  <!--
  <div id="heatMap_container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
  -->
- <canvas id="confidenceLineGraph"></canvas>
+
+ <div class="col-sm-6">
+  <canvas id="confidenceLineGraph"></canvas>
+ </div>
 
 </div>
 
