add point colors to confidence bar graph according to corrects answers

--- a/html/home.html
+++ b/html/home.html
@@ -27,9 +27,18 @@
  <div id="heatMap_container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
  -->
 
- <div class="col-sm-6">
-  <canvas id="confidenceLineGraph"></canvas>
+ <div class="row">
+  <div class="col"></div>
+
+  <div class="col-sm-6">
+   <canvas id="confidenceLineGraph"></canvas>
+  </div>
+
+  <div class="col"></div>
+
  </div>
+
+
 
 </div>
 
