--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -36,4 +36,19 @@
 
     </div>
 
+
+
+    <div class="row">
+        <!--
+        <div id="heatMap_container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
+        -->
+        <div class="col-sm-6">
+            <canvas id="confidenceLineGraph"></canvas>
+        </div>
+
+        <div class="col"></div>
+
+    </div>
+
+
 </div>
