--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -53,7 +53,7 @@
 
 </div>
 
-<div id="loading" style="text-align: center">
+<div id="loading" style="margin-top: 100px; text-align: center">
     <h1>Please Wait..</h1>
 
     <div class="loader"></div>
