add time range graph

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -46,7 +46,9 @@
             <canvas id="confidenceLineGraph"></canvas>
         </div>
 
-        <div class="col"></div>
+        <div class="col-sm-6">
+            <canvas id="timeBarGraph"></canvas>
+        </div>
 
     </div>
 
