--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -52,9 +52,10 @@
 
     </div>
 
+    <!--
     <div class="row">
         <div id="heatMap_container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
-    </div>
+    </div>-->
 
 </div>
 
