--- a/html/exp.html
+++ b/html/exp.html
@@ -117,53 +117,60 @@
                             </table>
                         </td>
                     </tr>
-
-
-
-                    <tr>
-                        <td>
-                            <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="user_ans_yes" ng-model="user_ans_match" ng-value="1" name="user_ans_match">
-                                <label class="custom-control-label" for="user_ans_yes">Match</label>
-                            </div>
-
-                            <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="user_ans_no" ng-model="user_ans_match" ng-value="0" name="user_ans_match">
-                                <label class="custom-control-label" for="user_ans_no">No Match</label>
-                            </div>
-                        </td>
-                        <td style="width:450px">
-                            <div>
-                                <div class="md-form" style="margin: 0 auto;float: none;">
-                                    <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
-                                        <input id="user_confidence" class="custom-range" type="range" min="0" max="100" value="50" step="1"/>
-
-                                        <label for="user_confidence" data-error="wrong" data-success="right"
-                                               style="display: block; margin-top:10px">Your Confidence </label>
-                                        <output id="text_confidence_input" name="text_confidence_input" for="user_confidence" style="border-left-width: 20px;
-                                                width: 20px; padding-left: 130px"></output>
-                                    </form>
-
-                            </div>
-                            </div>
-                        </td>
-                        <td>
-                            <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
-                        </td>
-
-
-                    </tr>
                 </tbody>
 
             </table>
 
         </div>
+
+        <div class="col"></div>
+    </div>
+
+    <div class="row">
+        <div class="col"></div>
+
+        <div class="col-sm-10">
+            <table class="table" style="display: block; overflow: auto;">
+                <tr>
+                    <td>
+                        <div class="custom-control custom-radio custom-control-inline">
+                            <input type="radio" class="custom-control-input" id="user_ans_yes" ng-model="user_ans_match" ng-value="1" name="user_ans_match">
+                            <label class="custom-control-label" for="user_ans_yes">Match</label>
+                        </div>
+
+                        <div class="custom-control custom-radio custom-control-inline">
+                            <input type="radio" class="custom-control-input" id="user_ans_no" ng-model="user_ans_match" ng-value="0" name="user_ans_match">
+                            <label class="custom-control-label" for="user_ans_no">No Match</label>
+                        </div>
+                    </td>
+                    <td style="width:450px">
+                        <div>
+                            <div class="md-form" style="margin: 0 auto;float: none;">
+                                <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
+                                    <input id="user_confidence" class="custom-range" type="range" min="0" max="100" value="50" step="1"/>
+
+                                    <label for="user_confidence" data-error="wrong" data-success="right"
+                                           style="display: block; margin-top:10px">Your Confidence </label>
+                                    <output id="text_confidence_input" name="text_confidence_input" for="user_confidence" style="border-left-width: 20px;
+                                                width: 20px; padding-left: 130px"></output>
+                                </form>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
+                    </td>
+
+                </tr>
+            </table>
+        </div>
+
         <div class="col"></div>
     </div>
 
 
 
-    <div class="modal fade" id="pause_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Pause exp Modal" aria-hidden="true">
+        <div class="modal fade" id="pause_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Pause exp Modal" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
