change exp page structure

--- a/html/exp.html
+++ b/html/exp.html
@@ -13,15 +13,12 @@
         <div class="col">
 
         </div>
-        <div class="col-sm-10">
-            <table class="table" style="height: 400px; display: block; overflow: auto;">
 
+        <div class="col-sm-3">
+            <table style="display: block">
                 <thead>
                     <tr>
                         <th scope="col" style="width:100px">#</th>
-                        <th scope="col">
-                            Term A
-                        </th>
                         <th scope="col">
                             Term B
                         </th>
@@ -36,91 +33,128 @@
                         <td id="A_col_name">
                             FirstName
                         </td>
-                        <td id="B_col_name">
-                            YourName
-                        </td>
-
                     </tr>
-                    <tr id="row_type">
+                    <tr id="row_type_A">
                         <th scope="row">
                             Column Type
                         </th>
                         <td id="A_col_type">
                             String
                         </td>
-                        <td  id="B_col_type">
-                            Varchar
-                        </td>
                     </tr>
-                    <tr id="row_control">
-                        <th scope="row">
-                            System Suggestion
-                        </th>
-                        <td colspan="2" id="exp_pair_score" style="text-align:center">
-                            0.6 similar
-                        </td>
-                    </tr>
-                    <tr id="row_instance">
+                    <tr id="row_instance_A">
                         <th scope="row">
                             Instance Example
                         </th>
                         <td id="A_col_instance">
                             A, B
                         </td>
+                    </tr>
+                </tbody>
 
+            </table>
+        </div>
+
+        <div class="col-sm-4">
+            <table>
+                <tr id="row_control">
+                    <th scope="row">
+                        System Suggestion
+                    </th>
+                    <td colspan="2" id="exp_pair_score" style="text-align:center">
+                        0.6 similar
+                    </td>
+                </tr>
+            </table>
+
+            <table class="table" style="height: 400px; display: block; overflow: auto;">
+                <tr>
+                    <th scope="row">
+                        Hierarchy
+                    </th>
+                    <td>
+                        <table class="table table-borderless"  id="term_a_table_h">
+                            <tbody ng-repeat="item in h_1">
+                            <tr ng-if="item.index==0">
+                                <td  style="color:{{item.color}}">
+                                    <i class="fas fa-folder"></i>{{item.val}}
+                                </td>
+                            </tr>
+                            <tr ng-if="item.index!=0">
+                                <!--<td id="table_a_{{$index}}">
+                                    {{decorateWithSpace($index,item.val)}}
+                                </td>-->
+                                <td style="color:{{item.color}}">
+                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
+
+                    <td >
+                        <table class="table table-borderless" id="term_b_table_h">
+                            <tbody ng-repeat="item2 in h_2">
+                            <tr ng-if="item2.index==0">
+                                <td  style="color:{{item2.color}}">
+                                    <i class="fas fa-folder"></i> {{item2.val}}
+                                </td>
+                            </tr>
+                            <tr ng-if="item2.index!=0" >
+                                <!--<td id="table_b_{{$index}}">
+                                    {{decorateWithSpace($index,item2.val)}}
+                                </td>-->
+                                <td style="color:{{item2.color}}">
+                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="col-sm-3">
+            <table style="display: block">
+                <thead>
+                    <tr>
+                        <th scope="col" style="width:100px">#</th>
+                        <th scope="col">
+                            Term B
+                        </th>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">
+                            Column Name
+                        </th>
+                        <td id="B_col_name">
+                            YourName
+                        </td>
+
+                    </tr>
+                    <tr id="row_type_B">
+                        <th scope="row">
+                            Column Type
+                        </th>
+                        <td  id="B_col_type">
+                            Varchar
+                        </td>
+                    </tr>
+                    <tr id="row_instance_B">
+                        <th scope="row">
+                            Instance Example
+                        </th>
                         <td id="B_col_instance">
                             C, D
                         </td>
 
                     </tr>
-                    <tr>
-                        <th scope="row">
-                            Hierarchy
-                        </th>
-                        <td>
-                            <table class="table table-borderless"  id="term_a_table_h">
-                                <tbody ng-repeat="item in h_1">
-                                    <tr ng-if="item.index==0">
-                                        <td  style="color:{{item.color}}">
-                                            <i class="fas fa-folder"></i>{{item.val}}
-                                        </td>
-                                    </tr>
-                                    <tr ng-if="item.index!=0">
-                                        <!--<td id="table_a_{{$index}}">
-                                            {{decorateWithSpace($index,item.val)}}
-                                        </td>-->
-                                        <td style="color:{{item.color}}">
-                                            <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </td>
-
-                        <td >
-                            <table class="table table-borderless" id="term_b_table_h">
-                                <tbody ng-repeat="item2 in h_2">
-                                    <tr ng-if="item2.index==0">
-                                        <td  style="color:{{item2.color}}">
-                                            <i class="fas fa-folder"></i> {{item2.val}}
-                                        </td>
-                                    </tr>
-                                    <tr ng-if="item2.index!=0" >
-                                        <!--<td id="table_b_{{$index}}">
-                                            {{decorateWithSpace($index,item2.val)}}
-                                        </td>-->
-                                        <td style="color:{{item2.color}}">
-                                            <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </td>
-                    </tr>
                 </tbody>
-
             </table>
-
         </div>
 
         <div class="col"></div>
