--- a/html/exp.html
+++ b/html/exp.html
@@ -61,6 +61,9 @@
                     <th scope="row">
                         System Suggestion
                     </th>
+                </tr>
+
+                <tr>
                     <td colspan="2" id="exp_pair_score" style="text-align:center">
                         0.6 similar
                     </td>
@@ -69,9 +72,15 @@
 
             <table class="table" style="height: 400px; display: block; overflow: auto;">
                 <tr>
-                    <th scope="row">
-                        Hierarchy
+                    <th scope="col">
+                        Term A Hierarchy
                     </th>
+                    <th scope="col">
+                        Term B Hierarchy
+                    </th>
+                </tr>
+
+                <tr>
                     <td>
                         <table class="table table-borderless"  id="term_a_table_h">
                             <tbody ng-repeat="item in h_1">
