change exp page structure - middle area

--- a/html/exp.html
+++ b/html/exp.html
@@ -58,19 +58,21 @@
         <div class="col-sm-4">
             <table>
                 <tr id="row_control">
-                    <th scope="row">
+                    <th colspan="2" scope="row">
                         System Suggestion
                     </th>
+                    <th></th>
                 </tr>
 
                 <tr>
                     <td colspan="2" id="exp_pair_score" style="text-align:center">
                         0.6 similar
                     </td>
+                    <td></td>
                 </tr>
             </table>
 
-            <table class="table" style="height: 400px; display: block; overflow: auto;">
+            <table class="table" style="height: 300px; display: block; overflow: auto;">
                 <tr>
                     <th scope="col">
                         Term A Hierarchy
